--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO
 ====
 
- + Display scores
- + Display word the opponent played
+ + display scores
+ + display word the opponent played
+ + sort games based on letterpress order
