Update scores dynamically as tiles are clicked on

--- a/TODO
+++ b/TODO
@@ -4,4 +4,4 @@ TODO
  + display scores
  + display word the opponent played
  + sort games based on letterpress order
- - update scores dynamically
+ + update scores dynamically
